Avoid java.io.UnsupportedEncodingException